# Ethio_BBPE

./: .gitignore  DEPLOYMENT_COMPLETE.md  README.md  RELEASE.md  pyproject.toml  requirements.txt  training_log.txt
data/: sample_corpus.txt  synaxarium_dataset.parquet
models/EthioBBPE/: README.md  config.json  tokenizer.json  training_metrics.json
models/checkpoints/: checkpoint_final_pre_compress.json
models/demo_tokenizer/: README.md  config.json  merges.txt  tokenizer.json  vocab.json
scripts/: bbpe_trainer.py  example_usage.py  prepare_data.py  train_tokenizer.py
src/ethiobbpe/: __init__.py  tokenizer.py
tests/: test_tokenizer.py
