[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EthioBBPE"
version = "1.0.0"
description = "Professional Amharic Biblical Text Tokenizer with Byte Pair Encoding"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Nexuss0781", email = "nexuss0781@gmail.com"}
]
maintainers = [
    {name = "Nexuss0781", email = "nexuss0781@gmail.com"}
]
keywords = [
    "amharic",
    "geez",
    "tokenizer",
    "nlp",
    "ethiopic",
    "biblical",
    "bpe",
    "huggingface",
    "african-languages"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.8"
dependencies = [
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0"
]

[project.urls]
Homepage = "https://github.com/nexuss0781/Ethio_BBPE"
Repository = "https://github.com/nexuss0781/Ethio_BBPE.git"
Documentation = "https://github.com/nexuss0781/Ethio_BBPE#readme"
Issues = "https://github.com/nexuss0781/Ethio_BBPE/issues"
HuggingFace = "https://huggingface.co/Nexuss0781/Ethio-BBPE"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.json.gz", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ethiobbpe --cov-report=term-missing"
